k8s/promtail-monitoring.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail-daemonset
spec:
  selector:
    matchLabels:
      name: promtail
  template:
    metadata:
      labels:
        name: promtail
    spec:
      serviceAccountName: promtail-serviceaccount # ТЕПЕРЬ С ПРАВАМИ!
      containers:
        - name: promtail
          image: grafana/promtail:latest
          args:
            - "-config.file=/etc/promtail/promtail.yaml"
          volumeMounts:
            - name: logs
              mountPath: /var/log
            - name: promtail-config
              mountPath: /etc/promtail
            - name: positions
              mountPath: /tmp
      volumes:
        - name: logs
          hostPath:
            path: /var/log
        - name: promtail-config
          configMap:
            name: promtail-config
        - name: positions
          hostPath:
            path: /tmp
