k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres # Этот селектор должен четко совпадать с label в твоем деплойменте postgres!
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
