k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main-gateway
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
    # ОДИН слушатель для порта 80, который примет ВСЕ запросы cert-manager
    - name: web
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    # Раздельные слушатели для HTTPS (порт 443)
    - name: websecure-main
      protocol: HTTPS
      port: 443
      hostname: "reshort.duckdns.org"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: flask-grafana-tls-secret

    - name: websecure-grafana
      protocol: HTTPS
      port: 443
      hostname: "grafana.reshort.duckdns.org"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: flask-grafana-tls-secret
