k8s/letsencrypt-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: letsencrypt-fixed-svc
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  selector:
    # Этот лейбл cert-manager вешает на все свои поды-солверы
    acme.cert-manager.io/http01-solver: "true" 
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: letsencrypt-global-route
  namespace: default
spec:
  parentRefs:
    - name: main-gateway
      sectionName: web
  hostnames:
    - "reshort.duckdns.org"
    - "grafana.reshort.duckdns.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/acme-challenge/
      backendRefs:
        - name: letsencrypt-fixed-svc
          port: 8089
